--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "tailwindcss": "^1.3.5",
         "vue": "^2.5.17",
         "vue-router": "^3.1.6",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.4.0"
     }
 }
