--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "vue-router": "^3.1.6",
         "vue-template-compiler": "^2.6.10",
         "vuex": "^3.4.0"
+    },
+    "dependencies": {
+        "dropzone": "^5.7.2"
     }
 }
